# jaxol

./: README.md  pyproject.toml
jaxol/: approx_prec.py  matrix_offset.py  online_learner.py  online_reductions.py  paramfree.py  perlayerscale.py  quadratic_regularizer.py  unit_learners.py  utils.py  weight_functions.py
